--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
           <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bold">
               <li class="nav-item">
-                <a class="nav-link text-dark"  href="#aboutus">ABOUT US</a>
+                <a class="nav-link text-dark"  href="#aboutus" id="aboutus-link">ABOUT US</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#services">SERVICES</a>
+                <a class="nav-link text-dark" href="#services" id="services-link">SERVICES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#achivements">ACHIVEMENTS</a>
+                <a class="nav-link text-dark" href="#achivements" id="achivements-link">ACHIVEMENTS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#clients">OUR CLIENTS</a>
+                <a class="nav-link text-dark" href="#clients"  id="clients-link">OUR CLIENTS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#gallery">GALLERY</a>
+                <a class="nav-link text-dark" href="#gallery" id="gallery-link">GALLERY</a>
               </li>
               
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#contactus">CONTACT US</a>
+                <a class="nav-link text-dark" href="#contactus" id="contact-link">CONTACT US</a>
               </li>
             </ul>
           </div>
@@ -602,5 +602,6 @@
 <script>
     AOS.init();
   </script>
+        <script src="solar.js"></script>
   </html>
   
