--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="home">
-    <div class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
           
               <img src="logo.png" alt="Logo" width="20%" height="20%"  class="d-inline-block align-text-top">
